// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetDescription correctly 1`] = `
<header>
  <div
    className="fdk-detail-date mb-5"
  >
    <HarvestDate
      harvest={null}
    />
  </div>
  <SearchHitHeader
    headerTag="h1"
    meta={
      Object {
        "description": "Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4. september 2015 nr. 1032 om justering av markagrensen fastlegger markalovens geografiske virkeområde med tilhørende kart.",
        "title": "AAMarkagrensen Oslo Kommune og nærliggende kommuner",
      }
    }
    provenance={null}
    publisher={
      Object {
        "id": "987654321",
        "name": "TESTETATEN",
        "uri": "http://data.brreg.no/enhetsregisteret/enhet/987654321",
      }
    }
    publisherItems={null}
    publisherLabel="Owned by"
    theme={
      Array [
        Object {
          "title": Object {
            "nb": "Forvaltning og offentlig støtte",
          },
          "uri": "http://publications.europa.eu/resource/authority/data-theme/GOVE",
        },
        Object {
          "title": Object {
            "nb": "Miljø",
          },
          "uri": "http://publications.europa.eu/resource/authority/data-theme/ENVI",
        },
      ]
    }
    title="AAMarkagrensen Oslo Kommune og nærliggende kommuner"
  />
  <ShowMore
    contentHtml={null}
    label="Description"
    showLessButtonText="Show less"
    showMoreButtonText="Show the full description"
  />
  <ShowMore
    contentHtml="Datasettes formål er nullam quis rius eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis euismod semper."
    label="Objective"
    showLessButtonText="Show less"
    showMoreButtonText="Show the full objective"
  />
</header>
`;

exports[`should render DatasetDescription correctly 2`] = `
<header>
  <div
    className="fdk-detail-date mb-5"
  >
    <HarvestDate
      harvest={null}
    />
  </div>
  <SearchHitHeader
    headerTag="h1"
    meta={
      Object {
        "description": "Datasettet avgrenser område for virkeområdet til lov 6. juni 2009 nr. 35 om naturområder i Oslo og nærliggende kommuner (markaloven) som trådte i kraft 1. september 2009. Markalovens virkeområde er fastsatt i forskrift 4. september 2015 nr. 1032 om justering av markagrensen fastlegger markalovens geografiske virkeområde med tilhørende kart.",
        "title": "AAMarkagrensen Oslo Kommune og nærliggende kommuner",
      }
    }
    provenance={null}
    publisher={
      Object {
        "id": "987654321",
        "name": "TESTETATEN",
        "uri": "http://data.brreg.no/enhetsregisteret/enhet/987654321",
      }
    }
    publisherItems={null}
    publisherLabel="Owned by"
    theme={
      Array [
        Object {
          "title": Object {
            "nb": "Forvaltning og offentlig støtte",
          },
          "uri": "http://publications.europa.eu/resource/authority/data-theme/GOVE",
        },
        Object {
          "title": Object {
            "nb": "Miljø",
          },
          "uri": "http://publications.europa.eu/resource/authority/data-theme/ENVI",
        },
      ]
    }
    title="AAMarkagrensen Oslo Kommune og nærliggende kommuner"
  />
  <ShowMore
    contentHtml={null}
    label="Description"
    showLessButtonText="Show less"
    showMoreButtonText="Show the full description"
  />
  <ShowMore
    contentHtml="Datasettes formål er nullam quis rius eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis euismod semper."
    label="Objective"
    showLessButtonText="Show less"
    showMoreButtonText="Show the full objective"
  />
</header>
`;

exports[`should render DatasetDescription correctly with no props 1`] = `
<header>
  <div
    className="fdk-detail-date mb-5"
  >
    <HarvestDate
      harvest={null}
    />
  </div>
  <SearchHitHeader
    headerTag="h1"
    meta={
      Object {
        "description": "",
        "title": "",
      }
    }
    provenance={null}
    publisher={null}
    publisherItems={null}
    publisherLabel="Owned by"
    theme={null}
    title=""
  />
</header>
`;
